Fix text color for Acceptable Use Policies in dark mode

--- a/terraform/frontend/interface/src/styles.less
+++ b/terraform/frontend/interface/src/styles.less
@@ -40,3 +40,17 @@ body {
         font-size: small;
     }
 }
+
+.text-dark-conditional {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-dark-rgb, 33, 37, 41), var(--bs-text-opacity)) !important;
+
+  [data-bs-theme="dark"] & {
+    color: rgba(var(--bs-light-rgb, 255, 255, 255), var(--bs-text-opacity)) !important;
+  }
+
+  [data-bs-theme="light"] {
+  //--bs-code-color: rgba(var(--bs-dark-rgb, 33, 37, 41), 1) !important;
+  color: rgba(var(--bs-dark-rgb, 33, 37, 41), var(--bs-text-opacity)) !important;
+  }
+}
